fix: adjust for dark mode

--- a/rizhiy_com/static/main.css
+++ b/rizhiy_com/static/main.css
@@ -46,6 +46,21 @@ a:active {
   color: darkgreen;
 }
 
+#content {
+  text-align: center;
+}
+
+.icon-link {
+  display: inline-block;
+  font-size: 2em;
+  margin: 0 0.5em;
+}
+#github-icon {
+  color: #1b1f24;
+}
+#linkedin-icon {
+  color: #0a66c2;
+}
 @media (prefers-color-scheme: dark) {
   body {
     color: #c9d1d9;
@@ -63,21 +78,10 @@ a:active {
   a:active {
     color: #68cc88;
   }
-}
-
-#content {
-  text-align: center;
-}
-
-.icon-link {
-  display: inline-block;
-  font-size: 2em;
-  margin: 0 0.5em;
-}
-
-#github-icon {
-  color: #1b1f24;
-}
-#linkedin-icon {
-  color: #0a66c2;
+  #github-icon {
+    color: #fff;
+  }
+  #linkedin-icon {
+    color: #fff;
+  }
 }
