--- a/rizhiy_com/static/navbar.css
+++ b/rizhiy_com/static/navbar.css
@@ -44,3 +44,9 @@
     top: 0;
   }
 }
+
+@media (prefers-color-scheme: dark) {
+  #navbar {
+    background: #2d3137;
+  }
+}
